--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/itsmesaadali/BackendNodejs#readme",
   "dependencies": {
     "dotenv": "^17.2.0",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "mongoose": "^8.16.4"
   }
 }
